# VerkkopeliServer

./: CMakeLists.txt  Connection.cpp  Connection.h  Game.cpp  Game.h  GameResultData.h  Player.h  README.md  Server.cpp  Server.h  main.cpp
